# claude-memory-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  formats.sh  project-structure.md  start.sh  test_backend.sh  test_frontend.sh  tests.sh
.claude/: settings.json
.claude/agents/: python-style.md  python-test.md  ts-style.md  ts-test.md
backend/: app.py  pyproject.toml  requirements.txt  tool_formatters.py
backend/tests/: conftest.py  test_api.py  test_helpers.py  testing_utils.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  fuzzyMatch.ts  index.css  types.ts  utils.ts
frontend/src/__tests__/: fuzzyMatch.test.ts  utils.test.ts
frontend/src/components/: BatchToolbar.css  CategoryPicker.css  CategoryPicker.tsx  CopyPathButton.css  CopyPathButton.tsx  DeleteConfirmDialog.css  DeleteConfirmDialog.tsx  MemoryDetail.css  MemoryDetail.tsx  MemoryList.css  MemoryList.tsx  ProjectList.css  ProjectList.tsx  ProjectTree.css  ProjectTree.tsx  QuickOpen.css  QuickOpen.tsx  RefreshButton.tsx  SessionDetail.css  SessionDetail.tsx  SessionList.css  SessionList.tsx  highlight-theme.css  markdown.css
frontend/src/components/__tests__/: CategoryPicker.test.tsx  CopyPathButton.test.tsx  DeleteConfirmDialog.test.tsx  MemoryDetail.test.tsx  MemoryList.test.tsx  ProjectList.test.tsx  ProjectTree.test.tsx  QuickOpen.test.tsx  RefreshButton.test.tsx  SessionDetail.test.tsx  SessionList.test.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useSelection.ts
frontend/src/test-utils/: factories.ts
(+1 files in other folders)
