[project]
name = "claude-memory-manager-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "python-frontmatter",
]

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.pytest.ini_options]
addopts = "--color=yes"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
ignore_missing_imports = true
exclude = [".venv", "venv", "build"]
